# pysdrc

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml  pytest.yml
circuitpython/: sirc_transmitter.py
examples/: saleae-decoder.py
examples/circuitpython/: all-decoder.py  hdmi-switcher-carousel.py  sony-remote.py  volume-seesaw.py
pysdrc/: decoder.py  encoder.py
pysdrc/circuitpython/: transmitter.py
pysdrc/tests/: test_decoder.py  test_encoder.py
pysirc/: decoder.py  encoder.py
pysirc/circuitpython/: transmitter.py
pysirc/tests/: __init__.py  test_decoder.py  test_encoder.py
