# SPDX-FileCopyrightText: 2020 Diego Elio Pettenò
#
# SPDX-License-Identifier: Unlicense

[metadata]
name = pysirc
description = SIRC protocol encoder/decoder
long_description = file:README.md
long_description_content_type = text/markdown
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_files =
    LICENSE
    LICENSES/*
url = https://github.com/Flameeyes/pysirc
keywords =
    remote control
    ir
    sirc
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = ~= 3.7

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
