# SPDX-FileCopyrightText: 2020 Diego Elio Pettenò
#
# SPDX-License-Identifier: 0BSD

[metadata]
name = pysdrc
description = Python Software Defined Remote Control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flameeyes/pysdrc
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_file = LICENSE
license_files =
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    remote control
    ir
    sirc

[options]
packages = find:
python_requires = ~= 3.7

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest-mypy
    pytest-timeout>=1.3.0
    pytest>=6.0
    setuptools_scm

[options.package_data]
* = py.typed

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
